fix spacing between different elements on quotes page / leave some comments that will be helpful later on if i wonder why styles are as they are

--- a/client/vite-project/src/components/footer/Footer.module.scss
+++ b/client/vite-project/src/components/footer/Footer.module.scss
@@ -4,5 +4,6 @@
     text-align: center;
     padding: 3rem 0;
     font-size: .8rem;
-    margin-top: 3rem;
+    // this margin aligns with the margin given on .quotes__list__wrapper in Quotes.module.scss to space elements out evenly
+    margin-top: 4rem;
 }
