--- a/client/vite-project/src/components/load-more-quotes/LoadMoreQuotes.module.scss
+++ b/client/vite-project/src/components/load-more-quotes/LoadMoreQuotes.module.scss
@@ -1,12 +1,13 @@
 .load__more__btn {
+    margin: 0;
     padding: .5rem 3rem;
-    background-color: rgb(53, 51, 51);
-    color: white;
-    cursor: pointer;
     border: none;
     border-radius: .5rem;
+    background-color: rgb(53, 51, 51);
+    color: white;
     font-weight: bold;
     text-transform: capitalize;
+    cursor: pointer;
 
     &:hover {
         background-color: rgb(14, 13, 13);
